fix: merge saucy image embeds